styles.css
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@100;300;500;700&display=swap");

* {
  font-family: "Oswald", sans-serif;
  margin: 0px;
}

@media only screen and (max-width: 700px) {
  nav {
    flex-direction: column;
    -webkit-flex-direction: column;
  }
  .projects {
    flex-direction: column;
    -webkit-flex-direction: column;
  }
  footer {
    flex-direction: column;
    -webkit-flex-direction: column;
  }
  form input {
    width: 200px !important;
  }
  form textarea {
    width: 200px !important;
  }
}

body {
  margin: 0;
  padding: 0;
  background: #f9f9fb;
  cursor: default;
  height: 100vh;
}

#wrapper {
  min-height: 100%;
  display: flex;
  display: -webkit-flex;
  flex-direction: column;
  -webkit-flex-direction: column;
}

.heavy-font {
  font-weight: 700;
}

nav {
  border-bottom: black solid 1px;
  display: flex;
  display: -webkit-flex;
  align-items: center;
  -webkit-align-items: center;
  justify-content: space-between;
  -webkit-justify-content: space-between;
  margin-left: 25px;
  margin-right: 25px;
}

footer {
  display: flex;
  display: -webkit-flex;
  align-items: center;
  justify-content: flex-start;
  -webkit-justify-content: flex-start;
  align-self: flex-end;
  width: 100vw;
}

footer span {
  flex: 1;
  justify-content: center;
  -webkit-justify-content: center;
  text-align: center;
  font-size: 80%;
  font-weight: 100;
  opacity: 0.7;
  padding: 5px;
  color: #717880;
  font-family: "pt-sans", sans-serif;
  cursor: default;
}

#name {
  justify-content: center;
  -webkit-justify-content: center;
  cursor: default;
}

#name li {
  border-top: black solid 1px;
  border-bottom: black solid 1px;
}

#icons {
  text-align: right;
  justify-content: center;
  -webkit-justify-content: center;
}

#pages {
  font-size: 150%;
  text-align: center;
  justify-content: center;
  -webkit-justify-content: center;
}

nav ul {
  flex: 1;
  -webkit-flex: 1;
  margin: 0;
  padding: 10px;
  list-style-type: none;
  display: inline-flex;
  display: -webkit-inline-flex;
}

nav ul li {
  display: inline;
}

nav ul li a {
  text-decoration: none;
  color: black;
}

nav ul li a:hover {
  opacity: 0.7;
}

.margin-r {
  margin-right: 25px;
}

.margin-sm {
  margin-right: 10px;
}

.active {
  color: rgb(29, 151, 233);
}

.fa {
  padding: 5px;
  text-align: center;
  text-decoration: none;
  margin-right: 10px;
}

.fa:hover {
  opacity: 0.7;
}

.fa-linkedin {
  background: #007bb5;
  color: white;
}

.fa-github {
  background: #000;
  color: white;
}

.round {
  border-radius: 50%;
}

.big-text {
  font-size: 150%;
}

img {
  max-width: 100%;
}

.projects {
  flex: 1;
  -webkit-flex: 1;
  display: flex;
  display: -webkit-flex;
  align-items: center;
  align-content: flex-start;
  -webkit-align-content: flex-start;
  justify-content: center;
  -webkit-justify-content: center;
  flex-direction: row;
  -webkit-flex-direction: row;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
}

.contact-form {
  flex: 1;
  -webkit-flex: 1;
  display: flex;
  display: -webkit-flex;
  align-items: center;
  -webkit-align-items: center;
  justify-content: flex-start;
  -webkit-justify-content: flex-start;
  flex-direction: column;
  -webkit-flex-direction: column;
  margin-top: 25px;
}

.project-card {
  width: 150px;
  height: 200px;
  margin-bottom: auto;
  margin-top: 30px;
  margin-right: 15px;
  margin-left: 15px;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  perspective: 500px;
  -webkit-perspective: 500px;
}

.project-card a {
  text-decoration: none;
  color: black;
}

.card-content {
  transition: transform 1s;
  -webkit-transition: transform 1s;
  transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  width: 100%;
  height: 100%;
}

.project-card:hover .card-content {
  transform: rotateY(-180deg);
  -webkit-transform: rotateY(-180deg);
  transition: transform 0.5s;
  -webkit-transition: transform 0.5s;
}

.front,
.back {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  position: absolute;
  display: inline-flex;
  display: -webkit-inline-flex;
  flex-direction: column;
  -webkit-flex-direction: column;
  justify-content: center;
  -webkit-justify-content: center;
  align-items: center;
  -webkit-align-items: center;
  text-align: center;
  overflow: hidden;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
}

.front {
  background: #3b3c3f;
}

.back {
  transform: rotateY(-180deg);
  /* background: #3b3c3f; */
  background-image: url(img/card-back.svg);
  justify-content: flex-start;
  -webkit-justify-content: flex-start;
  text-align: left;
}

.back h1 {
  color: rgb(29, 151, 233);
  font-size: 150%;
  font-weight: 700;
  text-align: left;
  margin: 10px;
  margin-bottom: 5px;
}

.buttons {
  margin: auto;
}

.back button {
  width: 55px;
  text-align: center;
  border: none;
  text-decoration: none;
  cursor: pointer;
  background: transparent;
  border: rgb(29, 151, 233) solid 1px;
  color: rgb(69, 180, 253);
  border-radius: 2px;
}

.back .single {
  width: 75px;
}

.back button:hover {
  border: rgb(122, 202, 255) solid 1px;
  color: rgb(122, 202, 255);
}

.card-description {
  color: white;
  margin: 10px;
  margin-top: 0px;
  margin-bottom: 0px;
  font-family: "pt-sans", sans-serif;
}

.contact-form {
  flex: 1;
  -webkit-flex: 1;
}

.card-title {
  text-align: center;
  display: inline-flex;
  display: -webkit-inline-flex;
  flex-direction: column;
  -webkit-flex-direction: column;
  background: white;
  width: 100px;
  margin: auto;
  height: 75px;
  border-radius: 25%;
  padding: 0;
  opacity: 0.95;
}

.card-title-text {
  width: 100%;
  margin: auto;
  opacity: 1;
}

.top-text {
  font-size: 125%;
  font-weight: 700;
}

.bottom-text {
  color: #909395;
}

form input {
  margin-bottom: 15px;
  width: 350px;
}

form input[type="submit"] {
  background-color: rgb(29, 151, 233);
  color: white;
  border-radius: 5px;
  cursor: pointer;
  border: none;
  font-family: "pt-sans", sans-serif;
  padding: 5px;
}

form textarea {
  width: 350px;
  height: 150px;
  margin-bottom: 25px;
  resize: none;
  font-family: "pt-sans", sans-serif;
  font-weight: 500;
}

form input[type="submit"]:hover {
  background-color: rgb(69, 180, 253);
}

